Test custom catalog
